[package]
name = "garlic_crust"
version = "0.1.0"
authors = ["qm210 <quantenmace@gmail.com>"]
edition = "2018"

[features]
logger = []
fullscreen = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'

[profile.dev]
opt-level = 0
lto = true
panic = "abort"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "processthreadsapi", "fileapi", "handleapi", "mmreg", "mmsystem", "mmeapi", "timeapi" ] }
libm = "0.2.1"
libc = "0.2.93"
midly = { version = "0.5.1", default-features = false, features = [] }
# heapless = "0.6.1"
# cty = "0.2.1" # for C types as c_double (for printf), but this is the same as f64
# ryu = "1.0.5" # fast float-string-conversion
# glam = { version = "0.13.0", default-features = false, features = ["libm"] } # in case we want their smoothstep or something

# dependencies only for debug mode (which can use std and stuff.)
hound = "3.4.0" # debug write to .wav file!

[build-dependencies]
ron = "0.6.4"
